cmake_minimum_required(VERSION 3.9)
project(TP2)

# Créé l'exécutable pour ce sous projet 
add_executable(TP2_1 TP2_1.cpp "TP2_1.cpp")
add_executable(TP2_2 TP2_2.cpp "TP2_2.cpp")
add_executable(TP2_3 TP2_3.cpp "TP2_3.cpp")
add_executable(TP2_4 TP2_4.cpp "TP2_4.cpp")
add_executable(TP2_5 TP2_5.cpp "TP2_5.cpp")




