cmake_minimum_required(VERSION 3.9)
project(TP)

# Créé l'exécutable pour ce sous projet 
add_executable(TP3_1 TP3_1.cpp "TP3_1.cpp")
add_executable(TP3_21 TP3_21.cpp "TP3_21.cpp")
add_executable(TP3_22 TP3_22.cpp "TP3_22.cpp")
add_executable(TP3_3 TP3_3.cpp "TP3_3.cpp")
add_executable(TP3_4 TP3_4.cpp "TP3_4.cpp")


