cmake_minimum_required(VERSION 3.9)
project(TP)

# Créé l'exécutable pour ce sous projet 
add_executable(TP4_11 TP4_11.cpp "TP4_11.cpp")
add_executable(TP4_12 TP4_12.cpp "TP4_12.cpp")
add_executable(TP4_2 TP4_2.cpp "TP4_2.cpp")
add_executable(TP4_3 TP4_3.cpp "TP4_3.cpp")
add_executable(TP4_4 TP4_4.cpp "TP4_4.cpp")
add_executable(TP4_5 TP4_5.cpp "TP4_5.cpp")
add_executable(TP4_6 TP4_6.cpp "TP4_6.cpp")
add_executable(TP4_7 TP4_7.cpp "TP4_7.cpp")
add_executable(TP4_8 TP4_8.cpp "TP4_8.cpp")
